<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartMirror</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="results_speech">Speech Results</string>
    <string name="action_settings">Settings</string>
    <string name="remote_connected">Remote Connected</string>
    <string name="remote_disconnected">Remote Disconnected</string>

    <!-- Account Activity -->
    <string name="address_input">Address</string>
    <string name="facebook_email_input">Email</string>
    <string name="facebook_password_input">Password</string>
    <string name="google_account">Google Account</string>
    <string name="no_account">No Account Selected</string>
    <string name="submit_button">Submit</string>
    <string name="work_location">Work Location</string>

    <!-- Module names (used to create Navigation Bar menu) -->
    <string name="title_calendar">Calendar</string>
    <string name="title_camera">Camera</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_forecast">Forecast</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_gmail">Gmail</string>
    <string name="title_help">Help</string>
    <string name="title_help_other">Other Commands</string>
    <string name="title_light">Light</string>
    <string name="title_music">Music</string>
    <string name="title_news">News</string>
    <string name="title_photos">Photos</string>
    <string name="title_quotes">Quotes</string>
    <string name="title_settings">Settings</string>
    <string name="title_traffic">Traffic</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_weather">Weather</string>

    <!-- Mira -->
    <string name="mira_greet_morning">Good morning, %s.</string>
    <string name="mira_greet_afternoon">Good afternoon, %s.</string>
    <string name="mira_greet_night">Good evening, %s.</string>

    <!-- Calendar -->
    <string name="calendar_title">Calendar</string>
    <string name="calendar_items_err">No Events Found</string>

    <!-- gmailHome -->
    <string name="gmail_home_inbox">(%d) Inbox</string>

    <!-- Gmail Fragment -->
    <string name="no_new_messages">No New Messages</string>
    <string name="inbox">Inbox</string>

    <!-- forecast -->
    <string name="forecast_title">Forecast</string>

    <!-- Login -->
    <string name="not_logged_in_err">"You are not logged in to %s\nGo to 'Settings' -> 'Account Setup' to change"</string>
    <string name="login_err">Oh no! Something went wrong!</string>

    <!-- News -->
    <string name="news_section_details">The following news desks are available:</string>

    <!-- WEATHER STRINGS -->
    <string name="place_not_found">Cannot Find Location</string>
    <string name="weather_data_err">Failed to retrieve weather data &#8212; check your internet connection</string>

    <!-- Music Strings -->
    <string name="music_title">Music</string>
    <string name="stream_not_found">"Error opening music stream."</string>
    <string name="stream_stopped">"...Music stopped:. Say 'play classical' to play the classical station...        ...Music stopped. Say 'play classical' to play the classical station..."</string>
    <string name="stream_pause">"...Music paused. Say 'play music' to resume or 'stop music' to return to normal command mode..."</string>
    <string name="stream_playing">"...Music playing. Say 'stop music' or 'pause music' to stop...                 ...Music playing. Say 'stop music' or 'pause music' to stop..."</string>
    <string name="stream_preparing">"...Preparing the stream. Please wait...             ...Preparing the stream. Please wait..."</string>

    <!-- Weather Icons -->
    <string name="weather_sunny">\uf00d</string>
    <string name="weather_cloudy_day">\uf002</string>
    <string name="weather_clear_night">\uf02e</string>
    <string name="weather_partly_cloudy_night">\uf083</string>
    <string name="weather_thunder">\uf01e</string>
    <string name="weather_drizzle">\uf00d</string>
    <string name="weather_foggy">\uf014</string>
    <string name="weather_cloudy">\uf041</string>
    <string name="weather_snowy">\uf01b</string>
    <string name="weather_sleet">\uf0b5</string>
    <string name="weather_rainy">\uf019</string>
    <string name="weather_umbrella">\uf084</string>

    <string name="weather_humidity">\uf07a</string>
    <string name="weather_deg_c">\uf03c</string>
    <string name="weather_deg_f">\uf045</string>
    <string name="weather_deg">\uf042</string>
    <string name="weather_arrow_up">\uf058</string>
    <string name="weather_arrow_down">\uf044</string>
    <string name="weather_wind_strong">\uf050</string>
    <string name="weather_therm_high">\uf055</string>
    <string name="weather_therm_low">\uf053</string>

    <!-- Settings strings -->
    <string name="settings_title">Settings</string>
    <string name="settings_account_btn">Account Setup</string>
    <string name="settings_weather_units">Weather Units</string>
    <string name="settings_system_vol">System Volume</string>
    <string name="settings_music_vol">Speech Volume</string>

    <string name="lbl_sound_on">Sound: On</string>
    <string name="lbl_sound_off">Sound: Off</string>
    <string name="lbl_voice_on">Voice Recognition: On</string>
    <string name="lbl_voice_off">Voice Recognition: Off</string>
    <string name="lbl_remote_on">Remote: On</string>
    <string name="lbl_remote_off">Remote: Off</string>
    <string name="lbl_weather_english">Weather: English</string>
    <string name="lbl_weather_metric">Weather: Metric</string>
    <string name="lbl_time_format_12hr">Time: 12-hour</string>
    <string name="lbl_time_format_24hr">Time: 24-hour</string>

    <!-- Text to Speech phrases -->
    <string name="sound_on">Sound on.</string>
    <string name="sound_on_err">Sound is on.</string>
    <string name="sound_off">I\'ll be quiet. Say \'sound on\' to cancel.</string>
    <string name="sound_off_err">Sound is already off. Oops. I shouldn\'t be talking.</string>
    <string name="speech_voice_on">I\'m listening</string>
    <string name="speech_voice_on_err">I\'m already listening</string>
    <string name="speech_voice_off">I\'ll ignore you</string>
    <string name="speech_voice_off_err">I\'m still ignoring you</string>
    <string name="speech_stay_awake">I\'ll stay awake. Say \'sleep\' to cancel.</string>
    <string name="speech_stay_awake_err">I\'m staying awake until you say \'sleep\'.</string>
    <string name="speech_stay_awake_cancel">\'Stay awake\' cancelled.</string>
    <string name="speech_remote_on">Remote control on</string>
    <string name="speech_remote_off">Remote control off</string>
    <string name="speech_weather_english">Weather display English</string>
    <string name="speech_weather_english_err">Weather display is currently set to English units</string>
    <string name="speech_weather_metric">Weather display metric</string>
    <string name="speech_weather_metric_err">Weather display is already set to metric</string>
    <string name="speech_remote_off_err">The remote is disabled.</string>
    <string name="speech_not_logged_in_err">You\'re not logged in!</string>

    <!-- twitter -->
    <string name="twitter_title">Twitter</string>

    <!-- api keys -->
    <string name="dark_sky_forecast_api_key">b8ec8fb1eca367cf424a8fb853d942f0</string>
    <string name="distance_matrix_api_key">AIzaSyBumZObXEyI5_7Ie0u8ZnrRKAXzojKpDw8</string>
    <string name="guardian_api_key">c6ed3edf-b0c6-4669-8e5c-ba32ba96a65f</string>

    <string name="twitter_api_key">mQ51h9ZbAz9Xk2AZtsUBJAGlx</string>
    <string name="twitter_secret">uSRCxg6AqE9DyIiuKjVD2ZzKC7CsGmuUcEljx2yafBwYHW74Rt</string>
    <string name="twitter_access_token">4202759960-FRC4u2oIMHECYgzsQJAtWG8TcHAsMWfF6cNigXG</string>

    <string name="facebook_app_id">913606198722814</string>
    <string name="facebook_app_secret">7ab77882cb36c0e7f942ebee16117444</string>

    <!-- Error messages -->
    <string name="twitter_error">Unable to retrieve twitter data &#8212; check your internet connection</string>
    <string name="news_err">Unable to retrieve news &#8212; check your internet connection</string>
    <string name="photos_err">Unable to retrieve photos &#8212; check your internet connection</string>

</resources>
