<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_calendar" android:icon="@android:drawable/ic_menu_today"
             android:title="@string/title_calendar"/>
        <item android:id="@+id/nav_camera" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/title_camera"/>
        <item android:id="@+id/nav_facebook" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/title_facebook"/>
        <item android:id="@+id/nav_light" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/title_light"/>
        <item android:id="@+id/nav_news" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/title_news"/>
        <item android:id="@+id/nav_music" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/title_music"/>
        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_gallery"
            android:title="Settings"/>

        <!--<item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
            android:title="Selfie" />
        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
            android:title="Weather" />
        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="News" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="Help" />-->
    </group>

</menu>